--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ getrandom = "0.2"
 bitflags = "*"
 mio = { version = "0.8.4", features = ["net", "os-poll"] }
 socketpair = "*"
+tokio = { version = "1", features = ["full"] }
