--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ byteorder = "*"
 log = "*"
 getrandom = "0.2"
 bitflags = "*"
-mio = { version = "0.8.4", features = ["net", "os-poll"] }
 socketpair = "*"
 tokio = { version = "1", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
+url = "*"
+base64 = "*"
